# game

./: .CMakeLists.txt.swp  .gitignore.swp  CMakeLists.txt  README.md  TODO  compile_commands.json  fuck_bjarne.py  ž
.mypy_cache/3.6/: _importlib_modulespec.meta.json  abc.meta.json  builtins.meta.json  codecs.meta.json  fuck_bjarne.data.json  fuck_bjarne.meta.json  glob.meta.json  io.meta.json  mypy_extensions.meta.json  pdb.meta.json  sys.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.6/collections/: __init__.meta.json  abc.meta.json
engine/: CMakeLists.txt
engine/include/engine/: .config_loader.h.swp  .graphics.h.swp  .utility.h.swp  base.h  config_loader.h  engine.h  gameplay.h  graphics.h  keyboard.h  sdl++.h  utility.h  utils.h
engine/sdl++/: CMakeLists.txt
engine/sdl++/include/sdl++/: sdl++.h
engine/sdl++/src/: sdl++.cpp
engine/src/: .config_loader.cpp.swp  .gameplay.cpp.swp  .graphics.cpp.swp  config_loader.cpp  gameplay.cpp  graphics.cpp  keyboard.cpp  sdl++.cpp
include/game/: .mike.h.swp  block.h  block_sprite.h  configs.h  mike.h  mike_animations.h  mike_sprite.h  mike_sprites.h  utils.h
png++/: CMakeLists.txt
png++/include/png++/: .png++.h.swp  compatibility.h  png++.h
png++/src/: .png++.cpp.swp  png++.cpp
res/: mike.json
res/configs/: mike.json  sprites.json
res/configs/animations/: mike.json
res/sprites/: jump.sheet.config  jump_preparation.sheet.config  jumping_in_place.sheet.config  jumping_sideways.sheet.config  landing_sideways.sheet.config  preparing_to_jump_sideways.sheet.config  pulling.sheet.config  pushing.sheet.config  run.sheet.config  running.sheet.config  standing_still.sheet.config  still.sheet.config
scripts/: replace_in_files
shadows/: CMakeLists.txt
shadows/src/: main.cpp
spacker/: CMakeLists.txt
spacker/include/spacker/: spacker.h  utils.h
spacker/src/: main.cpp  spacker.cpp
src/: .main.cpp.swp  .mike.cpp.swp  .mike_sprites.cpp.swp  block.cpp  block_sprite.cpp  configs.cpp  main.cpp  mike.cpp  mike_animations.cpp  mike_sprite.cpp  mike_sprites.cpp
tools/: CMakeLists.txt
tools/src/: add_frame_data.cpp
